--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   	<meta name="viewport" content="width = device-width, user-scalable = no" />
   	<meta name="apple-mobile-web-app-capable" content="yes" />
 
-  	<title>Pile</title>
+  	<title>cyborganizer</title>
 
 </head>
 
