create more detail as we zoom

--- a/uitest/index.html
+++ b/uitest/index.html
@@ -18,10 +18,8 @@
   <body>
     <div id="body">
       <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="100%" width="100%"
-           viewBox="-1 -1 2 2">
-        <g id="world">
-          <circle cx="0" cy="0" r="1" fill="red" />
-        </g>
+           viewBox="0 0 1 1">
+        <g id="world" />
       </svg>
     </div>
   </body>
