--- a/uitest/index.html
+++ b/uitest/index.html
@@ -12,6 +12,7 @@
     <script src="jquery-1.9.1.min.js"></script>
     <script src="jquery.hammer.min.js"></script>
     <script src="jquery.mousewheel.js"></script>
+    <script src="numeric-1.2.6.min.js"></script>
     <script src="index.js"></script>
 
   </head>
