--- a/uitest/index.html
+++ b/uitest/index.html
@@ -18,7 +18,8 @@
   </head>
   <body>
     <div id="body">
-      <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="100%" width="100%"
+      <svg id="svg" xmlns="http://www.w3.org/2000/svg" version="1.1"
+           height="100%" width="100%"
            viewBox="0 0 1 1">
         <g id="world" />
       </svg>
