--- a/uitest/index.html
+++ b/uitest/index.html
@@ -13,6 +13,7 @@
     <script src="jquery.hammer.min.js"></script>
     <script src="jquery.mousewheel.js"></script>
     <script src="numeric-1.2.6.min.js"></script>
+    <script src="curve.js"></script>
     <script src="index.js"></script>
 
   </head>
